--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,7 @@
         },
         "@schematics/angular:service": {
           "skipTests": true
-        }
-      },
+        },
         "@schematics/angular:application": {
           "strict": true
         }
@@ -45,6 +44,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
               "src/styles.scss"
             ],
             "scripts": []
@@ -108,6 +110,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
               "src/styles.scss"
             ],
             "scripts": []
@@ -141,5 +146,8 @@
       }
     }
   },
-  "defaultProject": "angular-grid"
+  "defaultProject": "angular-grid",
+  "cli": {
+    "analytics": false
+  }
 }
